--- a/index.html
+++ b/index.html
@@ -10727,7 +10727,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170413101450070" modified="20170413112134279" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
+<div created="20170413101450070" modified="20170413112450089" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
 
 
@@ -10769,8 +10769,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אופן ההכנה:
 
 1. טוחנים פקאנים וסוכר במעבד מזון 
+
 2. מוסיפים את החמאה וממשיכים לעבד עד לקבלת משחה חלקה
+
 3.  מוסיפים ביצים קמח ואבקת אפייה ומעבדים עד כדור חלק .
+
 4.משטחים לבסיס בתוך תבנית מרופדת בנייר אפייה ואופים כעשר דקות ב 170 מעלות צלזיוס .
 
 שלב ג': 
@@ -10787,12 +10790,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אופן ההכנה:
 
 1. ממיסים את השוקולד עם המים תוך בחישה
+
 2. מוסיפים לשוקולד תוך טריפה את החלמונים
-3. מקציפים את החלבונים עם חצי כוס סוכר (6 כפות), 
+
+3. מקציפים את החלבונים עם חצי כוס סוכר (6 כפות)
+ 
 4. מקפלים שוקולד עם קצף החלבונים זה לתוך זה
+
 5. אופים ב 170 מעלות כעשר דקות
 
-שלב ד': (הרכבת העוגה)
+שלב ד': 
+
+(הרכבת העוגה)
 
 1. מקציפים את הקצפת עם הקפה שהייתה במקרר עד לקצפת חזקה – אך לא יותר מידי
 
