פנהטונה ותרנגול הודו ולייףסטייל

--- a/index.html
+++ b/index.html
@@ -433,6 +433,8 @@ Error message and password prompt
 
 <li>פלפלים קלויים</li>
 
+<li>פנטונה</li>
+
 <li>פפינה</li>
 
 <li>צ'ן</li>
@@ -480,6 +482,8 @@ Error message and password prompt
 <li>תפוחי אדמה ובטטות בתנור</li>
 
 <li>תרבות הממשל היפנית</li>
+
+<li>תרנגול הודו אפוי</li>
 
 <li>תשבץ למאומנים</li>
 
@@ -8294,7 +8298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת מוקה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] פנטונה [[תרנגול הודו אפוי]] [[לייף סטייל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8314,8 +8318,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170411213029825" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170413181943156" title="$:/temp/search">
+<pre> </pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -9766,7 +9770,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170413101433269" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170413193329871" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9800,8 +9804,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[צנצנת עם חזרת]] - אנג'ליק
 * [[צלי בשר עם תפוחי אדמה]] - סוניה
 * [[חמוצים סיניים]] - גואן יין
-* תרנגול הודו אפוי - ז'נבייב
-*קוסקוס - ז'נבייב 
+* [[תרנגול הודו אפוי]] - ז'נבייב
+* קוסקוס - ז'נבייב 
 * לזניה צמחונית  
 * [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
 * עיגולי מרציפן - ז'נבייב 
@@ -9811,7 +9815,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[פאי פקאן עם קרמל]]- אווה 
 * פאי אגסים עם קרם גבינה ושקדים - אווה
 * [[עוגת מוקה]] - אווה
-* פנטונה - סוניה 
+* [[פנטונה]] - סוניה 
 * ריגו יאנצ'י - סוניה     
 
 </pre>
@@ -9829,8 +9833,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.</pre>
 </div>
-<div created="20161114183334957" modified="20161114184053461" title="לייף סטייל">
-<pre></pre>
+<div created="20161114183334957" modified="20170413185746225" title="לייף סטייל">
+<pre>
+[img[pictures/lifestyle.jpg]]
+
+![[זה משו]]
+
+</pre>
 </div>
 <div created="20161109220812161" modified="20170401172354442" tags="" title="ליל הדובונאז'">
 <pre>[img[pictures/HqWn77LXEeMsLQ5x.JPG]]
@@ -11103,6 +11112,55 @@ __אופן ההכנה____
 * אפשר להגיש מיד או לתת לזה לעמוד, או לאפסן ולהגיש גם כמה ימים לאחר ההכנה.
 </pre>
 </div>
+<div created="20170413193637751" modified="20170413195304796" title="פנטונה">
+<pre>[img[pictures/panatone.jpg]]
+
+!!![[סוניה]]:
+
+חומרים:
+
+* 350 גרם קמח
+* 30גרם שמרים טריים
+* 100 גרם סוכר
+* 3/4 כוס חלב
+* 3 חלמונים
+* קורט מלח
+* קליפה מגוררת מתפוז אחד
+* 50 גרם חמאה רכה
+* 50 גרם צימוקים לבנים קטנים
+* 50 גרם משמש/תאנים/קליפת אתרוג מסוכרת
+* 50 גרם קליפות הדר
+* רבע כוס רום
+
+
+* במקור עושים את העוגה עם מחמצת שאור, אך כאן הגירסה המהירה עם שמרים
+ * אפשר לשים כל סוג של פירות יבשים בפנים.
+* בחנויות הפרות היבשים יש סוגים נהדרים של פרות יבשים בלי סוף ואפשר להשתולל
+
+
+1. קוצצים את הפרות היבשים ומשרים אותם ברום למשך כמה שעות טובות
+
+2. שמים את הקמח השמרים הסוכר, קליפת התפוז והמלח בקערת ומערבבים קלות בעזרת כף
+
+3. מוסיפים לקערת הקמח את החלמונים והחלב ושמים במיקסר עם וו לישה עד שכל החומרים מתאחדים
+
+4. מוסיפים את החמאה חתוכה לקוביות וממשיכים בלישה עוד שש-שמונה דקות
+
+5. מניחים במקום חמים להתפחה עד שהבצק מכפיל את נפחו
+
+6. מסננים היטב את הפרות היבשים ומוסיפים לבצק 
+   בתנועות לישה עדינות
+    
+7. מעבירים את הבצק לתבנית משומנת ומתפיחים שנית כשעה במקום חמים.
+
+8.אופים כ-15 דק' בתנור שחומם מראש ל180 מעלות.
+    
+9. לאחר 15 דק' מכסים את העוגה (מניחים נייר כסף מעל מבלי להצמידו), וממשיכים לאפות בחום של 160 עד שקיסם שננעץ בעוגה  יוצא יבש. (40 דקות עד שעה ולפעמים אף יותר בשל גובהה של העוגה)
+
+10. מבשלים סירופ מכוס מיץ תפוזים וחצי כוס סוכר ומוזגים אותו מעל בעדינות כשהעוג שיצאה מהתנור עדיים חמה.
+
+</pre>
+</div>
 <div created="20170125155935412" modified="20170125170002675" title="פפינה">
 <pre>!!![[יויו]]:
 ''
@@ -11611,6 +11669,38 @@ Fapina''
 שמבוססת על הדרך שבה הבינו מנהלים אמריקנים את הדרך שבה הבינו מנהלים יפנים את תרבות הניהול האמריקנית.
 
 //המשך יבוא//</pre>
+</div>
+<div created="20170413144306056" modified="20170413190225057" title="תרנגול הודו אפוי">
+<pre>[img[pictures/turkey-cock.jpg]]
+
+!!![[ז'נבייב]]:
+
+1. ממלאים תרנגול הודו לא גדול, ונקי מחלקים פנימיים ומהגרון, באורז לבן מוכן, מעורבב בבצל מקורמל ופרות יבשים.
+
+2. מכינים בקערה תערובת הכוללת:
+
+* 100 גרם חמאה מומסת
+* רבע כוס שמן זית
+* גרד קליפת תפוז שלם
+* 3 שיני שום
+* שני עלי מרווה
+* פלפל שחור גרוס
+* מלח ים 
+
+
+3.  כשאלה מעורבבים, מורחים אותם היטב סביב התרנגול הממולא, ומניחים בסיר עבה ועמוק, שבתחתיתו כוס ורבע יין לבן יבש, לצלייה של שעתיים, בתנור שחומם מראש ל-170 מעלות.
+
+4. מבשלים בסיר כמה דקות (עד שהנוזלים מצטמצמים ומסמיכים - אך לא יותר מידי)
+
+* כוס מיץ תפוזים
+* כוס מים
+* כף סוכר
+
+מוזגים אותם מסביב לתרנגול ההודו האפוי, ומכניסים חזרה לחצי שעה נוספת של אפייה
+
+
+
+</pre>
 </div>
 <div created="20161026110100007" modified="20170403194001760" tags="" title="תשבץ למאומנים">
 <pre>|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''נ''|''&amp;#9608;''|''&amp;#9608;''|
