--- a/index.html
+++ b/index.html
@@ -491,6 +491,8 @@ Error message and password prompt
 
 <li>bg</li>
 
+<li>Draft of 'ריגו יאנצ'י'</li>
+
 <li>English</li>
 
 <li>HH</li>
@@ -8300,7 +8302,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[Draft of 'ריגו יאנצ'י']] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8320,8 +8322,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170413195719128" title="$:/temp/search">
-<pre> </pre>
+<div created="20161023184814872" modified="20170413221143315" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -9772,7 +9774,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170413195749278" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170413221325546" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9818,7 +9820,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * פאי אגסים עם קרם גבינה ושקדים - אווה
 * [[עוגת מוקה]] - אווה
 * [[פנטונה]] - סוניה 
-* ריגו יאנצ'י - סוניה     
+* [[ריגו יאנצ'י]] - סוניה     
 
 </pre>
 </div>
@@ -11784,6 +11786,13 @@ Fapina''
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20170413225102132" draft.of="ריגו יאנצ'י" draft.title="ריגו יאנצ'י" modified="20170413225516191" title="Draft of 'ריגו יאנצ'י'">
+<pre>[img[pictures/rigo-jancsi.jpg]]
+
+!!![[סוניה]]:
+
+</pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
