--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@ Error message and password prompt
 
 <li>רזיאל ורפאל</li>
 
+<li>ריגו יאנצ'י</li>
+
 <li>ריחות</li>
 
 <li>שאלון האחיות</li>
@@ -490,8 +492,6 @@ Error message and password prompt
 <li>תשבץ למאומנים</li>
 
 <li>bg</li>
-
-<li>Draft of 'ריגו יאנצ'י'</li>
 
 <li>English</li>
 
@@ -8302,7 +8302,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'ריגו יאנצ'י']] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ריגו יאנצ'י]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11378,6 +11378,13 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170413225102132" modified="20170413230131433" title="ריגו יאנצ'י">
+<pre>[img[pictures/rigo-jancsi.jpg]]
+
+!!![[סוניה]]:
+
+</pre>
+</div>
 <div created="20170124175341008" modified="20170206170410388" tags="" title="ריחות">
 <pre>[img[https://i.imgur.com/BJxTJjt.jpg)]]
 
@@ -11786,13 +11793,6 @@ Fapina''
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
-</div>
-<div created="20170413225102132" draft.of="ריגו יאנצ'י" draft.title="ריגו יאנצ'י" modified="20170413225516191" title="Draft of 'ריגו יאנצ'י'">
-<pre>[img[pictures/rigo-jancsi.jpg]]
-
-!!![[סוניה]]:
-
-</pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
