--- a/index.html
+++ b/index.html
@@ -11378,10 +11378,49 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170413225102132" modified="20170413230131433" title="ריגו יאנצ'י">
+<div created="20170413225102132" modified="20170414011015559" title="ריגו יאנצ'י">
 <pre>[img[pictures/rigo-jancsi.jpg]]
 
 !!![[סוניה]]:
+
+מחממים את התנור לחום בינוני (170 מעלות) ומרפדים תבנית 26 עגולה עם תחתית נשלפת בנייר אפייה
+
+1. הבסיס
+
+* 8  ביצים
+* 8כפות סוכר
+* 4כפות קקאו
+*  כפות קמח תופח
+
+ שמים בקערת המערבל הנקייה את הביצים ומפעילים, מוסיפים בהדרגה את הסוכר וממשיכים להקציף עד לקבלת קצף בהיר ותפוח
+
+ מערבבים ומסננים את הקקאו והקמח, ומקפלים אותם לתוך תערובת הביצים. מעבירים לתבנית ואופים כ־30-20 דקות, עד שהעוגה מתייצבת וקיסם הננעץ במרכזה יוצא יבש. מוציאים ומניחים לצינון מלא.
+
+2.  קצפת הקפה: 
+
+* 2 מיכלי (500 מ&quot;ל) שמנת מתוקה
+* 3כפיות נס קפה
+* 400 גרם שוקולד מריר
+
+מבשלים את השמנת המתוקה עם השוקולד והנס קפה, ובוחשים מידי פעם עד לרתיחה.מצננים, ומקררים במקרר לשש שעות לפחות.
+
+3.  סירופ
+
+בסיר קטן מרתיחים כמה דקות חצי כוס ברנדי וחצי כוס מים
+
+4. קרם שוקולד
+
+מרתיחים כוס שמנת מתוקה, וטורפים לתוכה 150 גרם קוביות שוקולד מריר עד לקבלת קרם חלק 
+
+3. הרכבת העוגה: 
+
+* מחלצים את העוגה מהתבנית ופורסים אותה לרוחבה שלוש פעמים (כך שיהיו ארבעה חלקים)
+* מניחים שכבה ראשונה על בסיס התבנית, מתיזים מעט ברנדי שבושל עם כמות שווה של מים, ומורחים שליש מכמות הקרם
+* חוזרים על הפעולות הללו עם עם שני חלקי עוגה נוספים.
+* את הרביעי מניחים מעל, ומעליו יוצקים את קרם השוקולד.
+
+מקררים כמה שעות ומגישים
+
 
 </pre>
 </div>
