--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@ Error message and password prompt
 
 <li>עורכת הדין</li>
 
+<li>עיגולי מרציפן</li>
+
 <li>עיר בנויה מרחובות</li>
 
 <li>עץ המשפחה של אווה</li>
@@ -8302,7 +8304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ריגו יאנצ'י]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סלט עגבניות עם שום]] [[סלק מבושל]] אספרגוס [[סלט חסה]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] [[עוגיות קימל]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[גרטן תפו&quot;א]] [[מלפפונים חמוצים]] [[פחזניות ממולאות בכבד קצוץ]] חזרת [[צלי בשר עם תפוחי אדמה]] [[כל המתכונים של ארוחת הכריסמס]] [[עיגולי מרציפן]] [[לזניה צמחונית]] [[תרנגול הודו אפוי]] פנטונה [[עוגת מוקה]] [[לייף סטייל]] [[ריגו יאנצ'י]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8322,7 +8324,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170413221143315" title="$:/temp/search">
+<div created="20161023184814872" modified="20170414011313561" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9774,7 +9776,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170413221325546" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170414012021208" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9812,7 +9814,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קוסקוס - ז'נבייב 
 * [[לזניה צמחונית]] - רוז'ה  
 * [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
-* עיגולי מרציפן - ז'נבייב 
+* [[עיגולי מרציפן]] - ז'נבייב 
 
 * פבלובה - פיליפ
 * [[פאי דובדבנים]] - אווה
@@ -9901,10 +9903,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114183334957" modified="20170413185746225" title="לייף סטייל">
+<div created="20161114183334957" modified="20170414011342325" title="לייף סטייל">
 <pre>[img[pictures/lifestyle.jpg]]
 
-![[זה משו]]
+!![[זה משו]]
 
 </pre>
 </div>
@@ -10902,6 +10904,34 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
+<div created="20170414012036863" modified="20170414012314240" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<pre>
+
+
+
+
+
+ 
+המרכיבים:
+
+300 גרם (כ-3 כוסות) שקדים מולבנים
+
+1/2 כוס אבקת סוכר
+
+3 כפיות מיץ לימון
+
+2 טיפות מי ורדים
+
+גרד קליפת לימון
+
+ 
+אופן ההכנה:
+
+* טוחנים את השקדים במעבד מזון עד לקבלת אבקת שקדים או שקדים טחונים דק מאוד.
+* מוסיפים את יאבקת הסוכר, מיץ הלימון ומי הורדים ומעבדים עד לקבלת קרם חלק. טועמים ואם צריך מוסיפים מה שצריך
+* לשים לתוך בצק המרציפן שנוצר את גרד קליפת הלימון
+ * יוצרים כדורים ומאחסנים במקרר, בקופסה סגורה היטב. </pre>
+</div>
 <div created="20170411211723019" modified="20170411212817850" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
 
@@ -11378,7 +11408,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170413225102132" modified="20170414011015559" title="ריגו יאנצ'י">
+<div created="20170413225102132" modified="20170414011251070" tags="[[מתכוני ארוחת הכריסמס]]" title="ריגו יאנצ'י">
 <pre>[img[pictures/rigo-jancsi.jpg]]
 
 !!![[סוניה]]:
