--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@ Error message and password prompt
 
 <li>פאי פקאן עם קרמל</li>
 
+<li>פבלובה</li>
+
 <li>פה</li>
 
 <li>פועה</li>
@@ -8304,7 +8306,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סלט עגבניות עם שום]] [[סלק מבושל]] אספרגוס [[סלט חסה]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] [[עוגיות קימל]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[גרטן תפו&quot;א]] [[מלפפונים חמוצים]] [[פחזניות ממולאות בכבד קצוץ]] חזרת [[צלי בשר עם תפוחי אדמה]] [[כל המתכונים של ארוחת הכריסמס]] [[עיגולי מרציפן]] [[לזניה צמחונית]] [[תרנגול הודו אפוי]] פנטונה [[עוגת מוקה]] [[לייף סטייל]] [[ריגו יאנצ'י]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] פבלובה [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9776,7 +9778,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170414012021208" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170414153544430" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9816,7 +9818,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
 * [[עיגולי מרציפן]] - ז'נבייב 
 
-* פבלובה - פיליפ
+* [[פבלובה]] - פיליפ
 * [[פאי דובדבנים]] - אווה
 * [[פאי פקאן עם קרמל]]- אווה 
 * פאי אגסים עם קרם גבינה ושקדים - אווה
@@ -10904,11 +10906,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170414012314240" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170414145332368" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
 <pre>
 
-
-
+[img[pictures/marzipan.jpg]]
 
 
  
@@ -11113,6 +11114,37 @@ __אופן ההכנה____
 *למזוג בעדינות מעל הפקאנים את הקרמל מבלי *לכסות אותם לגמרי. (את הקרמל שנשאר אפשר לשמור במקרר או במקפיא ולהשתמש בו לפאי נוסף.)
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
+</div>
+<div created="20170414153603797" modified="20170414160538788" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
+<pre>
+[img[pictures/pavlova.jpg]]
+
+!!![[פיליפ]]:
+
+שלום למי שקורא,
+
+:)
+ובכן,
+
+אני בכלל לא איש מטבח, למעט העובדה שבזמן האחרון אני מוקף בכאלה, וזה נהדר.
+
+אבל, 
+
+למדתי פטנט עם טאצ' אישי,
+
+וכשאני מוזמן לארוחות חגיגיות, אני קונה, בדרך כלל בקונדיטוריה שליד הבית, או בזו שליד הקליניקה - תחתיות מרנג.
+
+קטנות, גדולות, מה שנראה לי באותו הרגע.
+
+אני גם קונה מיני תותים, פטל וכו'
+
+חצי מהפטל ופרות היער אני טוחן עם סוכר וניל וחצי משאיר כמו שהם.
+
+חוץ מזה אני מקציף שני מיכלים של שמנת מתוקה לעוגות עם שתי ארבע כפות סוכר.
+
+אני אורז כל דבר לחוד
+
+וכולם נהנים מאד</pre>
 </div>
 <div created="20170324140205427" modified="20170324140215737" title="פה">
 <pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
