--- a/index.html
+++ b/index.html
@@ -8306,7 +8306,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] פבלובה [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[תשבץ למאומנים]] [[כל המתכונים של ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8326,8 +8326,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170414011313561" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170414181549429" title="$:/temp/search">
+<pre>תשבץ</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -10907,9 +10907,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
 <div created="20170414012036863" modified="20170414145332368" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
-<pre>
-
-[img[pictures/marzipan.jpg]]
+<pre>[img[pictures/marzipan.jpg]]
 
 
  
@@ -11115,9 +11113,8 @@ __אופן ההכנה____
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
 </div>
-<div created="20170414153603797" modified="20170414160538788" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
-<pre>
-[img[pictures/pavlova.jpg]]
+<div created="20170414153603797" modified="20170414180739193" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
+<pre>[img[pictures/pavlova.jpg]]
 
 !!![[פיליפ]]:
 
@@ -11138,9 +11135,9 @@ __אופן ההכנה____
 
 אני גם קונה מיני תותים, פטל וכו'
 
-חצי מהפטל ופרות היער אני טוחן עם סוכר וניל וחצי משאיר כמו שהם.
+חצי מהפטל ופרות היער אני טוחן עם סוכר וניל ומיץ לימון לפי הטעם, וחצי משאיר כמו שהם.
 
-חוץ מזה אני מקציף שני מיכלים של שמנת מתוקה לעוגות עם שתי ארבע כפות סוכר.
+חוץ מזה אני מקציף לקצפת חזקה, שני מיכלים של שמנת מתוקה עם ארבע כפות סוכר שטוחות.
 
 אני אורז כל דבר לחוד
 
@@ -11877,7 +11874,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161026110100007" modified="20170403194001760" tags="" title="תשבץ למאומנים">
+<div created="20161026110100007" modified="20170414181612395" tags="" title="תשבץ למאומנים">
 <pre>|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''נ''|''&amp;#9608;''|''&amp;#9608;''|
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''ח''|''&amp;#9608;''|''&amp;#9608;''|
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''מ''|''&amp;#9608;''|''&amp;#9608;''|
