--- a/index.html
+++ b/index.html
@@ -8306,7 +8306,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="קואנג אירי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8326,7 +8326,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170414193450488" title="$:/temp/search">
+<div created="20161023184814872" modified="20170414203243490" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8553,8 +8553,8 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170409201107138" title="אירי">
-<pre>[img[pictures/B6sqcxD28MtPcDif.JPG]]
+<div created="20161206200127567" modified="20170414202805054" title="אירי">
+<pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
 
@@ -11348,8 +11348,8 @@ Fapina''
 * לאחר שהצלי התקרר מעט (20 דקות), מוסיפים מים כדי כיסוי ומבשלים אותו מעל להבה נמוכה שעה.
 * לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.</pre>
 </div>
-<div created="20170323213155309" modified="20170323220314226" title="קואנג">
-<pre>[img[pictures/fPy4p4KI0ffJdhBs.jpg]]
+<div created="20170323213155309" modified="20170414212623522" title="קואנג">
+<pre>[img[pictures/queng.jpg]]
 
 !!![[גורה]]:
 
