--- a/index.html
+++ b/index.html
@@ -451,6 +451,8 @@ Error message and password prompt
 
 <li>קואנג</li>
 
+<li>קוסקוס</li>
+
 <li>קפה מילר</li>
 
 <li>קרן</li>
@@ -8212,7 +8214,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;נא&quot;,
+            &quot;text&quot;: &quot;data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2060%2030%22%20width%3D%221200%22%20height%3D%22600%22%3E%0A%3CclipPath%20id%3D%22t%22%3E%0A%09%3Cpath%20d%3D%22M30%2C15%20h30%20v15%20z%20v15%20h-30%20z%20h-30%20v-15%20z%20v-15%20h30%20z%22%2F%3E%0A%3C%2FclipPath%3E%0A%3Cpath%20d%3D%22M0%2C0%20v30%20h60%20v-30%20z%22%20fill%3D%22%2300247d%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20stroke%3D%22%23fff%22%20stroke-width%3D%226%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20clip-path%3D%22url(%23t)%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%224%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23fff%22%20stroke-width%3D%2210%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%226%22%2F%3E%0A%3C%2Fsvg%3E%0A&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8306,7 +8308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="קואנג אירי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] קוסקוס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9778,7 +9780,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170414153544430" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170415002017698" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9813,7 +9815,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[צלי בשר עם תפוחי אדמה]] - סוניה
 * [[חמוצים סיניים]] - גואן יין
 * [[תרנגול הודו אפוי]] - ז'נבייב
-* קוסקוס - ז'נבייב 
+* [[קוסקוס]] - ז'נבייב 
 * [[לזניה צמחונית]] - רוז'ה  
 * [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
 * [[עיגולי מרציפן]] - ז'נבייב 
@@ -11355,6 +11357,62 @@ Fapina''
 
 קואנג בסינית זה היקום.
 </pre>
+</div>
+<div created="20170415002104316" modified="20170415005017204" tags="[[מתכוני ארוחת הכריסמס]]" title="קוסקוס">
+<pre>[img[pictures/coucous.jpg]]
+
+
+!!![[ז'נבייב]]:
+
+את הקוסקוס שלי אני הכי אוהבת עם סלט פול קר שכולל הרבה בצל סגול והרבה לימון והרבה עשבי תיבול, אבל כשאני מתארחת אני לרוב מביאה את הגירסה המוכרת - עם או בלי בשר - אבל יש בפנים תמיד דלעת, גזר, בצל, גרגרי חומוס - אבל לא קישואים. קישואים אני לא אוהבת.
+
+
+
+חומרים לקוסקוס:
+
+* ק&quot;ג סולת
+* שתיין וחצי כוסות מים
+* רבע כוס שמן קנולה
+ָ כף מלח
+
+חומרים למרק:
+
+* 2 בצלים
+* 2 גזרים
+* 2 תפוחי אדמה קטנים
+* שלושה עלי סלרי
+* חצי כוס גרגירי חומוס שהושרו שמונה שעות
+* חצי קילוגרם דלעת
+* מלח גס
+* פלפל שחור גרוס
+* 2כפיות שטוחות כורכום
+* רבע כוס שמן
+* 2 ליטר מים
+
+
+אופן ההכנה:
+
+1. מבשלים את גרגירי החומוס במים עד שהם רכים ונותנים להם להתקרר.
+
+2. מכינים את הקוסקוס: 
+
+בקערה
+
+:מערבבים מעט סולת (קמצוץ שנלקח בכף היד) מרטיבים אותו וממוללים בעזרת האצבעות. במטרה לפורר את כל הסולת שנגעה במים. מפוררים בהדרגה את כל הסולת שבקערה לחתיכות קטנות, ודואגים שלא יוותרו גושים. בגמר העיבוד מנפים הכל במסננת דקה שמתאימה לקוסקוס ,וכך שנוצרים פירורים קטנטנים ואחידים ובלי גושים.
+
+3. מאדים את הקוסקוס:
+
+ מחזירים לקערה, שמים רבע כוס שמן ומעט מלח. מאדים חצי שעה בסיר אידוי לקוסקוס (או כשהקוסקוס בתוך קערה מעל לסיר עם אדים) כשהקוסקוס מכוסה. (אסור שהמים יגעו בקוסקוס)
+
+4. שוטפים היטב את הירקות: 
+
+את הדלעת חותכים לכמה קוביות גסות, את הבצל חוצים, את הגזרים ותפוחי האדמה משאירים שלמים. מטגנים אותם בסיר של המרק, ומוסיפים  מים  כדי כיסוים. מביאים לרתיחה ומוסיפים את עלי הסלרי, גרגרי החומוס, מלח גס, פלפל שחור גרוס וכורכום. מבשלים על אש נמוכה שעה ורבע.
+
+5. לאחר האידוי הראשוני מורידים את הקוסקוס מהאש, מוסיפים את השמן והמלח ומערבבים.
+
+6. מאדים את הקוסקוס בשנית, הפעם כ-20 דקות. ומסירים מן האש.
+
+7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
 <div created="20170119232802609" modified="20170320182321883" title="קפה מילר">
 <pre>[img[pictures/zGhVc9HucPGCaiKJ.jpg]]
