דינה זל ואחיות חוץ

--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@ Error message and password prompt
 
 <li>אורז לבן עם צנוברים</li>
 
+<li>אחיות חוץ</li>
+
 <li>אימא, סבתא ואני</li>
 
 <li>אירי</li>
@@ -280,6 +282,8 @@ Error message and password prompt
 <li>גרטן תפו&quot;א</li>
 
 <li>דיוויד בואי</li>
+
+<li>דינה ז&quot;ל</li>
 
 <li>דןדן</li>
 
@@ -8308,7 +8312,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] קוסקוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחיות חוץ]] [[האחיות כהן]] המעבדה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8328,7 +8332,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170414203243490" title="$:/temp/search">
+<div created="20161023184814872" modified="20170415112306033" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8548,6 +8552,26 @@ Error message and password prompt
 לאחר העשרים דקות האורז מוכן להגשה.
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
+</div>
+<div created="20170415105721479" modified="20170415121321227" tags="[[אחיות חוץ]]" title="אחיות חוץ">
+<pre>[img[pictures/ahayot-huz.jpg]]
+
+!!![[גורה]]:
+
+כככה יויו ואני כתבנו [[אז|המעבדה]]:
+
+[[האחיות כהן]] הינה קבוצה יצירתית, שעל פי הגדרתה את עצמה לא כל מי שחבר בה חייב לעסוק ביצירה לפרנסתו או באופן קבוע, אלא רואה את היצירתיות כחלק מחיי היומיום וכעניין הכרחי.
+כמו כן כל מי שמשתייכת לאחיות הינה אחות כהן גם אם מינה הוא זכר.
+
+האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר ג'ון אירווינג: &quot;החיים רציניים אך האומנות היא תענוג&quot;
+
+שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים איתן ויואל כהן – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
+
+זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
+
+האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם. 
+כבר בטקסט הכתוב לעיל אפשר לראות איך בחרו לעצמן את האח אירווינג ואת האחים הבימאים איתן וג'ואל, וכמותן יש עוד רבים (מצוינים ומשובחים), שיצוינו בהמשך, וכן ילכו ויתווספו . 
+</pre>
 </div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
@@ -8802,7 +8826,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170411203319790" tags="[[נאמני הגנזך]]" title="גורה">
+<div created="20161026214951927" modified="20170415105933081" tags="[[נאמני הגנזך]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -8814,7 +8838,7 @@ Error message and password prompt
 
 את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה לצייר את עצמה אבל לא הולך לה.
 
-היא בת הזקונים להורי, דינה ז&quot;ל ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]],  [[גיגי]] ואת הגורה.
+היא בת הזקונים להורי, [[דינה ז&quot;ל]] ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]],  [[גיגי]] ואת הגורה.
 
 אחרי שנפצעה [[כתבה|עיר בנויה מרחובות]] וקראה כל הזמן.
 
@@ -8940,6 +8964,23 @@ Error message and password prompt
 
 
 </pre>
+</div>
+<div created="20170415105944150" modified="20170415111734013" title="דינה ז&quot;ל">
+<pre>[img[pictures/ima-shel-gura.jpg]]
+
+!!![[גורה]]:
+
+ככה אימא שלנו, של יויו ושלי, הייתה מבלה את רוב שעותיה, יושבת על כסא הנדנדה במרפסת וקוראת, ומידי פעם רוטנת או קוראת לנו ואומרת לנו מה צריך לעשות ומרבה בנזיפות. 
+
+היא נפטרה כשכבר שנינו היינו בפריז, כבר אחרי התאונה שלי.
+
+גידלו אותנו ממושמעים, ומעולם לא העזנו לסרב לדרישותיה של אימי כל עוד גרתי בבית.
+
+כשהתגייסתי ויצאתי מן הבית, והתחלתי להכיר אנשים ולשמוע סיפורים ואמירות הנוגעות להורים התחיל לבעבע בי כעס, וגם היום יש לי התפרצויות של זעם שיכול לעלות בשניה בגלל שטות.
+
+כשזה קורה משתנה לי הקול ושפת הדיבור שלי משתנה. אני צועקת ומדברת לא יפה.
+
+אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על אלפרד, וזה נראה פויה. ממש מביך.</pre>
 </div>
 <div created="20161116210610208" modified="20170326091728514" title="דןדן">
 <pre>[img[pictures/suqW4rJHq5EPYS7l.jpg]]
@@ -9201,7 +9242,7 @@ Error message and password prompt
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170404191846627" title="המעבדה">
+<div created="20161113192814802" modified="20170415121335044" title="המעבדה">
 <pre>[img[pictures/t2az8aqECTTa8imN.JPG]]
 
 !!![[כאן היינו]]
@@ -9223,7 +9264,7 @@ Error message and password prompt
 
 זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
 
-האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם. 
+[[האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם|אחיות חוץ]]. 
 כבר בטקסט הכתוב לעיל אפשר לראות איך בחרו לעצמן את האח הסופר והאחים הבימאים, וכמותן יש עוד רבים (מצוינים ומשובחים), שיצוינו בהמשך, וכן ילכו ויתווספו . 
 
 על סדר יומן : (ולעולם לא לפני האוכל) 
@@ -9289,12 +9330,12 @@ loving you</pre>
 
 המשך יבוא.</pre>
 </div>
-<div created="20170406162100924" modified="20170409200942541" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
+<div created="20170406162100924" modified="20170415112139529" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 !!![[גורה]]:
 
-זה מה שיויו סיפר לאווה עלי, ואווה כתבה:
+זה מה שיויו סיפר לאווה עלי, אווה כתבה [[ורני|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא [[אחות חוץ|אחיות חוץ]] ערך:
 
 
 
@@ -10017,13 +10058,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170406164152446" modified="20170406184447521" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20170415112708243" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
-מחפשת את אירי
+!!![[גורה]]:
 
-(גורה כותבת)
+את הסיפור הזה כתבתי לאחר שחזרנו עם אירי מהודו, וערך אותו [[רני|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
+
+מחפשת את אירי
 
 
 
@@ -11576,7 +11619,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161213210419446" modified="20170404165040157" title="שאלון האחיות">
+<div created="20161213210419446" modified="20170415105651373" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
 
 !!![[גורה]]:
@@ -11589,7 +11632,7 @@ Fapina''
 לאחר שקראתן וביקרתן באתר, בודאי הייתן מעוניינות לדעת אם גם אתן מתאימות להיקרא אחות כהן .
 
 שאלון האחיות מיועד לגברים ולנשים כאחד (או אולי כאחת). 
-גם אישה וגם גבר יכולים להיות או לא להיות אחות כהן, ומכיוון שכך, כל איש או אישה הקוראים בו ומעוניינים לענות על שאלון זה, יקראו בו על פי מינם ועל פי העדפתם המינית, למרות שהוא כתוב בלשון נקבה הטרוסקסואלית.
+גם אישה וגם גבר יכולים להיות או לא להיות [[אחות כהן|אחיות חוץ]], ומכיוון שכך, כל איש או אישה הקוראים בו ומעוניינים לענות על שאלון זה, יקראו בו על פי מינם ועל פי העדפתם המינית, למרות שהוא כתוב בלשון נקבה הטרוסקסואלית.
 
 השיבי על כל שאלה, בסוף השאלון לחצי על שלח, המתיני עד לקבלת תשובה.
 
