--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@ Error message and password prompt
 
 <li>עץ המשפחה של אווה</li>
 
+<li>פאי אגסים עם קרם גבינה ושקדים</li>
+
 <li>פאי דובדבנים</li>
 
 <li>פאי פקאן עם קרמל</li>
@@ -8312,7 +8314,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחיות חוץ]] [[האחיות כהן]] המעבדה" title="$:/StoryList">
+<div list="[[פאי אגסים עם קרם גבינה ושקדים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8332,7 +8334,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170415112306033" title="$:/temp/search">
+<div created="20161023184814872" modified="20170415140434171" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9821,7 +9823,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170415002017698" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170415150642986" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9864,7 +9866,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[פבלובה]] - פיליפ
 * [[פאי דובדבנים]] - אווה
 * [[פאי פקאן עם קרמל]]- אווה 
-* פאי אגסים עם קרם גבינה ושקדים - אווה
+* [[פאי אגסים עם קרם גבינה ושקדים]] - אווה
 * [[עוגת מוקה]] - אווה
 * [[פנטונה]] - סוניה 
 * [[ריגו יאנצ'י]] - סוניה     
@@ -10951,22 +10953,22 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170414145332368" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170415140415970" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
  
 המרכיבים:
 
-300 גרם (כ-3 כוסות) שקדים מולבנים
+* שלוש כוסות שקדים שקדים מולבנים
 
-1/2 כוס אבקת סוכר
+*שני שלישים  כוס אבקת סוכר
 
-3 כפיות מיץ לימון
+* 4-6כפיות מיץ לימון לפי הטעם
 
-2 טיפות מי ורדים
+* כף ליקר שקדים (אמרטו)
 
-גרד קליפת לימון
+* גרד קליפת לימון שלם
 
  
 אופן ההכנה:
@@ -11062,7 +11064,69 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170412224620608" modified="20170413074421255" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי דובדבנים">
+<div created="20170415150652294" modified="20170415162357353" title="פאי אגסים עם קרם גבינה ושקדים">
+<pre>[img[pictures/pie-agasim.jpg]]
+
+אווה:
+
+1. בצק פריך:
+
+במעבד מזון:
+
+קודם :
+
+•	200 גרם חמאה
+•	כוס סוכר
+
+עד למשחה חלקה
+
+מוסיפים:
+ 
+
+•	350 גרם קמח
+•	כפית מחוקה אבקת אפייה
+•	2חלמונים
+•	2כפות שמנת חמוצה
+•	2כפות ברנדי
+
+וממשיכים לערבל עד לקבלת כדור בצק
+
+2. מלית גבינה:
+
+* 250 גרם גבינה לבנה - זה יכו להיות גם שילוב של 
+כמה גבינות: מסקרפונה, ריקוטה, גבינת שמנת, גבינה לבנה פשוטה, שמנת חמוצה
+* שני שקיקים של סוכר וניל
+* 2 כפות סוכר לבן
+* חלמון אחד
+* כף קורנפלור
+* גרד קליפת לימון אחד
+
+טורפים את כל החומרים לקרם חלק
+
+3. האגסים:
+
+* קולפים שלושה אגסים, מוציאים מהם את הליבה וחותכים לשמיניות
+* במחבת כבדה צולים את האגסים בכף חמאה על להבה גבוהה שלוש דקות
+* מנמיכים את הלהבה ומוסיפים שתי כפות סוכר וממשיכים שתי דקות תוך ערבוב
+* מוסיפים רבע כוס יין אדום או בחרובקה, מיץ מחצי לימון, ממשיכים עוד שלוש-ארבע דקות ומכבים.
+
+הרכבת העוגה:
+
+* מחממים תנור ל 170 מעלות
+* בתבנית עגולה 28, משטחים 2/3 מהבצק כולל הדפנות
+* אופים את הבסיס עשר דקות
+* מוציאים מהתנור ונותנים לו להתקרר רבע שעה
+* מורחים את תערובת הגבינה על תחתית הבצק
+* מעליה מסדרים את האגסים במעגל
+* מקשטים עם שארית הבצק את חלקה העליון של העוגה
+* מפזרים שקדים מולבנים פרוסים
+* אופים 40-50 דקות ( עד שהבצק זהוב)
+
+
+
+</pre>
+</div>
+<div created="20170412224620608" modified="20170415141249995" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי דובדבנים">
 <pre>[img[pictures/pie-duvdevanim.jpg]]
 
 
@@ -11076,41 +11140,50 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בצק פריך שקדים:
 
-120 גרם שקדים טחונים
-200 גרם חמאה
-כוס סוכר
-5חלמונים
-מיץ מחצי לימון
-שקיק סוכר וניל
-2 כוסות ושני שליש כוס קמח לבן מנופה
-כפית מחוקה אבקת אפייה
+* 120 גרם שקדים טחונים
+* 200 גרם חמאה
+* כוס סוכר
+* 5חלמונים
+* מיץ מחצי לימון
+* שקיק סוכר וניל
+* 2 כוסות ושני שליש כוס קמח לבן מנופה
+* כפית מחוקה אבקת אפייה
 
 1. לתוך מעבד מזון מכניסים את השקדים וטוחנים לאבקה
-2. מוסיפים את החמאה והסוכר וממשיכים לעבד עד לקבלת משחה חלקה.
+
+2. מוסיפים את החמאה והסוכר וממשיכים לעבד עד לקבלת משחה חלקה
+
 3. מוסיפים את שאר החומרים ומערבלים עד לקבלת כדור בצק.
 
 
 מילוי דובדבנים מבושל:
 
-2 צנצנות דובדבנים חמוצים ללא חרצנים
-1 כוסות מהמיץ
-1 כוסות יין אדום
-כף קינמון
- 2כפות קורנפלור
-2 כפות סוכר
+* 2 צנצנות דובדבנים חמוצים ללא חרצנים
+*  כוס מהמיץ
+* כוסיין אדום
+* כף קינמון
+ * 2כפות קורנפלור
+* 2 כפות סוכר
 
 
 1.לסנן את הדובדבנים ולשמור בצד
+
 2. לבשל את המיץ עם היין, הקינמון, הקורנפלור והסוכר תוך כדי בחישה עד לקבלת מרקם סמיך 
+
 3.להסיר מהאש, להוסיף את הדובדבנים ולקרר
 
 הרכבת העוגה:
 
 1.לחמם תנור לחום בינוני (170 מעלות)
+
 2.לשטח שני שלישים מהבצק בתבנית 24 עגולה כולל הדפנות
+
 3.למלא במילוי דובדבנים
+
 4.לקשט בשליש הבצק הנותר מלמעלה
+
 5.לפזר שקדים מולבנים פרוסים
+
 6.לאפות 40 דקות בערך, עד שמזהיב יפה יפה.
 
 
