תיקון פאי אגסים

--- a/index.html
+++ b/index.html
@@ -11064,10 +11064,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170415150652294" modified="20170415162357353" title="פאי אגסים עם קרם גבינה ושקדים">
+<div created="20170415150652294" modified="20170415191236114" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
 
-אווה:
+!!![[אווה]]:
+
+הבצק הפריך הזה, הוא בצק עשיר וטעים מאד, ובשל עושרו קשה יותר לרדד אותו, ומכיון שכך, משטחים אותו עם כפות הידיים בעובי פחות או יותר אחיד, עולים שניים-שלושה סנטימטרים לשוליים ואת השאריות מסירים בעזרת גב של סכין או פלטה או קלף או סכין גלגלת.
+
+:) 
+
 
 1. בצק פריך:
 
@@ -11075,29 +11080,30 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 קודם :
 
-•	200 גרם חמאה
-•	כוס סוכר
+* 200 גרם חמאה
+* כוסכוס סוכר
 
 עד למשחה חלקה
 
 מוסיפים:
  
 
-•	350 גרם קמח
-•	כפית מחוקה אבקת אפייה
-•	2חלמונים
-•	2כפות שמנת חמוצה
-•	2כפות ברנדי
+* 350 גרם קמח
+* כפית מחוקה אבקת אפייה
+* 2 חלמונים
+* 2 כפות שמנת חמוצה
+* 2 כפות ברנדי
 
 וממשיכים לערבל עד לקבלת כדור בצק
 
 2. מלית גבינה:
 
 * 250 גרם גבינה לבנה - זה יכו להיות גם שילוב של 
-כמה גבינות: מסקרפונה, ריקוטה, גבינת שמנת, גבינה לבנה פשוטה, שמנת חמוצה
+כמה גבינות: מסקרפונה, ריקוטה, גבינת שמנת, גבינה לבנה פשוטה, שמנת חמוצה, אני השתמשתי באותו יום בריקוטה, גבינה לבנה רכה 5%, שמנת חמוצה ושתי כפות שמנת מתוקה
 * שני שקיקים של סוכר וניל
 * 2 כפות סוכר לבן
 * חלמון אחד
+* 6 כפות שקטים מולבנים טחונים 
 * כף קורנפלור
 * גרד קליפת לימון אחד
 
@@ -11107,8 +11113,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 * קולפים שלושה אגסים, מוציאים מהם את הליבה וחותכים לשמיניות
 * במחבת כבדה צולים את האגסים בכף חמאה על להבה גבוהה שלוש דקות
-* מנמיכים את הלהבה ומוסיפים שתי כפות סוכר וממשיכים שתי דקות תוך ערבוב
-* מוסיפים רבע כוס יין אדום או בחרובקה, מיץ מחצי לימון, ממשיכים עוד שלוש-ארבע דקות ומכבים.
+* מנמיכים את הלהבה ומוסיפים שתי כפות סוכר וממשיכים ארבע דקות, בהן מידי פעם הופכים בעדינות את האגסים
+* מוסיפים רבע כוס בחרובקה, מיץ מחצי לימון, ממשיכים עוד שלוש-ארבע דקות ומכבים.
 
 הרכבת העוגה:
 
